client/views/events/details/_event.details.scss
$course-header-bg: darken($blue-lighter, 5%);

.event-course-header {
	background-color: $course-header-bg;
	cursor: pointer;
	padding: 15px;
	position: relative;
	transition: background-color .15s;

	&.highlight {
		background-color: darken($course-header-bg, 2%);
	}
}

.event-course-header > h2 {
	margin: 0;
	padding-bottom: 5px;
}

.event-course-header > h2 > a {
	font-size: $font-size-base;
	margin-left: 5px;
}

.event-course-header + .event {
	border-color: $course-header-bg;
	border-style: solid;
	border-width: 0 5px 5px;

	@media (min-width: $screen-xs-min) {
		background-color: rgba($green, .35);
		padding: 15px;
	}
}

.event + .page-component {
	margin-top: 15px;
}

.event-details-body {
	background: $event-body-bg;
	height: calc(#{'100% - 70px'});
}

.event-details-body .grouplist {
	margin-bottom: 10px;
}

.event-details-body .grouplist .dropdown-menu {
	z-index: 10000;
}

.event-details-header {
	background: $event-header-bg;
}

.event-details-header .date {
	font-size: x-large;
}

.event-details-header .date	.glyphicon-calendar {
	font-size: large;
}

.event-details-header .glyphicon-time {
	font-size: small;
}

.event-details-description {
	margin-top: 10px;
}

.event-details-body .shariff {
	background-color: $event-body-bg;
	margin-bottom: 15px;
}

.event-delete-confirmation {
	$background-color: lighten($brand-danger, 20%);

	background-color: $background-color;
	border: 1px solid darken($background-color, 20%);
	padding: 15px 15px 0;
}

